# task

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  eightbit.cpp  endian.cpp  load.cpp  rough.cpp
header/: Debayer.h  DebayerAlgo.h  DebayerAlgo.hpp  Image.h  Image.hpp  ImageProcessor.h  PPMImageWriter.h  PPMImageWriter.hpp  RAW12Loader.h  RAW12Loader.hpp  RAW2PGM.h
src/: Debayer.cpp  DebayerAlgo.cpp  DebayerCorner.cpp  DebayerImage.cpp  DebayerNearest.cpp  ExtractTileValues.cpp  ImageProcessor.cpp  PPMImageWriter.cpp  PreProcessImage.cpp  RAW12Loader.cpp  RAW2PGM.cpp  RAW2PGM.h  SepChannels.cpp  WriteChannels.cpp  main.cpp
