CMAKE_MINIMUM_REQUIRED(VERSION 3.12.2)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "-Wall -pedantic")
PROJECT(RAW2PGM)

INCLUDE_DIRECTORIES(header)
FILE (GLOB SOURCES "src/*.cpp")

ADD_LIBRARY(Image SHARED header/Image.hpp)

SET_TARGET_PROPERTIES(Image PROPERTIES LINKER_LANGUAGE CXX)
ADD_EXECUTABLE(convert ${SOURCES})
TARGET_LINK_LIBRARIES(convert PRIVATE Image)